# PathFinder-source

./: .gitignore  PERIODIC_VALIDATION_UPGRADE.md  PLUGIN_DESCRIPTION.md.bak  README.md  SECURITY_ENHANCEMENT_LOG.md  build.gradle  build.sh  config.hocon  javac.20250807_223114.args  quick_build.sh  validata_test.yml
.gradle-build/resources/main/: plugin.yml  validata.yml
.gradle-build/resources/main/lang/: en-US.yml  es-ES.yml  fr-FR.yml  zh-CN.yml
scripts/: build-fatjar.sh  quick-build.sh
src/main/java/org/momu/pathfinder/bootstrap/: PathFinderPlugin.java
src/main/java/org/momu/pathfinder/command/: MainCommand.java  NavCommands.java
src/main/java/org/momu/pathfinder/config/: LanguageManager.java  PathfinderConfig.java
src/main/java/org/momu/pathfinder/navigation/algorithm/: Pathfinder.java
src/main/java/org/momu/pathfinder/navigation/effect/: ParticleGen.java
src/main/java/org/momu/pathfinder/navigation/runtime/: PathFinding.java
src/main/java/org/momu/pathfinder/navigation/service/: NavigationService.java
src/main/java/org/momu/pathfinder/navigation/state/: PlayerTracker.java
src/main/java/org/momu/pathfinder/presentation/gui/: GuiManager.java
src/main/java/org/momu/pathfinder/presentation/listener/: MasterListener.java  MenuListener.java
src/main/java/org/momu/pathfinder/runtime/: TaskManager.java
src/main/java/org/momu/pathfinder/util/: KeyUtils.java
src/main/java/org/momu/pathfinder/waypoint/model/: Waypoint.java
src/main/java/org/momu/pathfinder/waypoint/service/: WaypointService.java
src/main/java/org/momu/tOCplugin/: ConfigWatcher.java  GuiManager.java  LanguageManager.java  MainCommand.java  MasterListener.java  NativeLibraryLoader.java  NavCommands.java  NavigationService.java  Pathfinder.java  PlayerMoveListener.java  PlayerTracker.java  TOCpluginNative.java  Waypoint.java  WaypointService.java
src/main/java/org/momu/tOCplugin/command/: MainCommand.java  NavCommands.java
src/main/java/org/momu/tOCplugin/config/: ConfigWatcher.java  LanguageManager.java  PathfinderConfig.java
src/main/java/org/momu/tOCplugin/finder/: ParticleGen.java  PathFinding.java
src/main/java/org/momu/tOCplugin/internal/: NativeLibraryLoader.java  Waypoint.java
src/main/java/org/momu/tOCplugin/listener/: MasterListener.java  MenuListener.java  PlayerMoveListener.java
src/main/java/org/momu/tOCplugin/manager/: GuiManager.java  PlayerTracker.java  TaskManager.java
src/main/java/org/momu/tOCplugin/util/: KeyUtils.java
src/main/native/: CMakeLists.txt  README.md
src/main/native/build-win-tmp/: CMakeCache.txt  Makefile  cmake_install.cmake
src/main/native/cmake/: windows-cross.cmake
src/main/native/include/: machine_code.h  native_config.h  startup_validator.h
src/main/native/scripts/: build_secure.sh  build_windows.bat  cross_compile_windows.sh
src/main/native/src/: machine_code.c  native_plugin_manager.c  startup_validator.c  windows_compat.h
src/main/resources/: config.yml  pathfinder.yml  plugin.yml
src/main/resources/lang/: de-DE.yml  en-US.yml  es-ES.yml  fr-FR.yml  pt-PT.yml  ru-RU.yml  zh-CN.yml  zh-TW.yml
src/test/java/org/momu/tOCplugin/: TestNativeLoader.java
